Bug 113465 - setting the date by typing in the text box doesn't work
Summary: setting the date by typing in the text box doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kstars
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kstars
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-09-28 00:03 UTC by Gilles Schintgen
Modified: 2006-01-23 04:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gilles Schintgen 2005-09-28 00:03:11 UTC
Version:            (using KDE KDE 3.4.90)
Installed from:    Gentoo Packages

In the "Set Time" dialog the textbox doesn't work. I can enter a date but it's simply ignored, even when I click OK.
Choosing a date using the month/year buttons or the calendar widget works just fine.
(Reproducible in KDE 3.4.2 and 3.5_beta1)
Comment 1 kstars 2006-01-23 04:20:59 UTC
SVN commit 501479 by harris:

Make the line edit in ExtDatePicker read-only; it is only meant to 
display the date selected with the calendar widget, it is not for user 
entry.  

BUG: 113465


 M  +2 -0      extdatepicker.cpp  
 M  +2 -2      extdatepicker.h  


--- branches/KDE/3.5/kdeedu/libkdeedu/extdate/extdatepicker.cpp #501478:501479
@@ -162,6 +162,8 @@
   setFontSize(fontsize);
   line->setValidator(val);
   line->installEventFilter( this );
+  line->setReadOnly( true );
+
   if (  QApplication::reverseLayout() )
   {
       yearForward->setIconSet(BarIconSet(QString::fromLatin1("2leftarrow")));
--- branches/KDE/3.5/kdeedu/libkdeedu/extdate/extdatepicker.h #501478:501479
@@ -25,7 +25,7 @@
 
 #include "extdatetime.h"
 
-class QLineEdit;
+class KLineEdit;
 class QToolButton;
 class ExtDateValidator;
 class ExtDateTable;
@@ -170,7 +170,7 @@
   /// the button for selecting the year directly
   QToolButton *selectYear;
   /// the line edit to enter the date directly
-  QLineEdit *line;
+  KLineEdit *line;
   /// the validator for the line edit:
   ExtDateValidator *val;
   /// the date table