Make the line edit in ExtDatePicker read-only; it is only meant to display the date selected with the calendar widget, it is not for user entry.

BUG: 113465

svn path=/branches/KDE/3.5/kdeedu/libkdeedu/; revision=501479